# frontdoor-ipgroup-updater

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  main.py  pyproject.toml
.github/workflows/: main.yaml
frontdoor_ipgroup_updater/: logging.py  main.py  settings.py
